--- a/package.json
+++ b/package.json
@@ -61,6 +61,13 @@
     "Architecture.md",
     "TASKS.md"
   ],
+  "overrides": {
+    "form-data": "^4.0.0",
+    "tough-cookie": "^4.1.3",
+    "underscore": "^1.13.6",
+    "nedb": "npm:@seald-io/nedb@^4.0.0",
+    "binary-search-tree": "npm:@seald-io/binary-search-tree@^1.0.0"
+  },
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/js-yaml": "^4.0.9",
